# dft-orch

./: .gitignore  README.md  calculator.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_calculator.py  test_validator.py  validator.py  verify.py
configs/: default.yaml
configs/materials/: h2.yaml  h2_relax.yaml  h2_retry.yaml  tio2_rutile.yaml
src/dft_graph/: __init__.py  cli.py  config.py  graph.py  state.py
src/dft_graph/nodes/: __init__.py  build_calculator.py  load_config.py  load_structure.py  repair_and_retry.py  run_relaxation.py  validate_and_report.py
src/dft_graph/utils/: __init__.py  hashing.py  logging.py  paths.py  serialization.py
structures/: h2.xyz  h2_pbc.xyz  h2_stretched.xyz  tio2_rutile.cif
taskman/: __init__.py  __main__.py  cli.py  exporter.py  formatting.py  models.py  storage.py
tests/: conftest.py  test_config.py  test_hashing.py  test_paths.py  test_pbc_run.py  test_relaxation_run.py  test_retry.py  test_smoke_run.py  test_structure_loading.py
