[project]
name = "dft-orch"
version = "0.1.0"
description = "Deterministic LangGraph-based DFT workflow orchestration (learning project)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ase>=3.23.0",
  "langgraph>=0.2.0",
  "pydantic>=2.6.0",
  "pyscf>=2.5.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pip-tools>=7.4.1",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
# DFT stack is optional until milestone 3+ to keep installs light.
dft = [
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

